* Make field_names optional in Model.default_get
* Remove check_xml_record from ModelStorage
* Always synchronize XML data with database
* Convert None as empty string when searching on Char or Text
* Support instances as default value
* Add metadata columns to ModelSQL with table query
* Add report data to header_key
* Validate integer digits
* Add support for DATE_TRUNC from INTERVAL to SQLite backend
* Add support for EXTRACT from INTERVAL to SQLite backend
* Add msg_gettext and msg_ngettext to Report context
* Support plural translation of messages
* Support plural translations in report
* Add plural source to translations
* Add plural to language
* Set Decimal precision of default context from TRYTOND_DECIMAL_PREC
* Replace usage of docstring of Model by __string__ attribute
* Rename ir.model.field 'field_description' into 'string'
* Replace docstring of models by __string__
* Rename ir.model 'name' field into 'string' and 'model' into 'name'

Version 7.4.0 - 2024-11-04
--------------------------
* Bug fixes (see mercurial logs for details)
* Do not copy relational fields with filter
* Support range functions and operators in EXCLUDE constraint
* Add sparkline chart tools
* Add setup methods to activate_modules
* Add method to the backend to estimate number of rows
* Add setup indexes method to ModelSQL
* Support getting many sequences at once
* Add sequence_nextval function to Database
* Retrieve groups of actions without checking access (#13506)
* Check read access of report records (#13505)
* Forbid editing cron when it is running
* Store last cron durations
* Use JSONB to store MultiSelection field by default
* Add cardinality option to Index Usage
* Allow configuring TinyMCE license key
* Add tools to apply types to SQLite select queries
* Compress RPC responses
* Change _changed_values and _save_values properties to method
* Add configuration for report convert command
* Use process pool to run cron
* Lock only running cron record