@@ -1,3 +1,4 @@
+* Store the ignore search limit option of export
 * Make field_names optional in Model.default_get
 * Remove check_xml_record from ModelStorage
 * Always synchronize XML data with database
